# internal/controller/file-meta-data.go
@@ -19,9 +19,15 @@ func NewFileMetaDataController(metaDataUsecase usecase.StaticFileMetaDataManager
 	return &fileMetaDataController{metaDataUsecase, staticFileManagerUsecase}
 }
 
+// @Produce      json
+// @Param        limit  query  int  false "no comment"
+// @Param        skip  query  int  false "no comment"
+// @Param        uploader_id  query  int  false "no comment"
+// @Param        bucket_name  query  string  false "no comment"
+// @Router       /file-meta-data/ [get]
 func (mc *fileMetaDataController) GetFilesMetaData(c *fiber.Ctx) error {
 	skip, limit, uploaderId, bucketName :=
-		c.QueryInt("skip"), c.QueryInt("limit"), c.QueryInt("uploader_id"), c.Query("bucket-name")
+		c.QueryInt("skip"), c.QueryInt("limit"), c.QueryInt("uploader_id"), c.Query("bucket_name")
 
 	data, err := mc.metaDataUsecase.GetAllFilesMetaDataByAdmin(c.Context(), bucketName, limit, skip, uploaderId)
 	if err != nil {
@@ -31,6 +37,9 @@ func (mc *fileMetaDataController) GetFilesMetaData(c *fiber.Ctx) error {
 	return c.JSON(entity.ResponseModel{Successful: true, Data: data})
 }
 
+// @Produce      json
+// @Param        file_name  path  string  true "no comment"
+// @Router       /file-meta-data/{file_name} [get]
 func (mc *fileMetaDataController) GetFileMetaDataByFileName(c *fiber.Ctx) error {
 	fileName := c.Params("file_name")
 	data, err := mc.metaDataUsecase.GetFileMetaDataByFileName(c.Context(), fileName)
@@ -40,18 +49,10 @@ func (mc *fileMetaDataController) GetFileMetaDataByFileName(c *fiber.Ctx) error 
 	return c.JSON(entity.ResponseModel{Successful: true, Data: data})
 }
 
-func (mc *fileMetaDataController) DeleteFile(c *fiber.Ctx) error {
-	user := c.Locals("user").(*jwt.Token)
-	claims := user.Claims.(jwt.MapClaims)
-	fileName := c.Params("file_name")
-
-	data, err := mc.staticFileManagerUsecase.DeleteFile(c.Context(), fileName, claims)
-	if err != nil {
-		return err
-	}
-	return c.JSON(entity.ResponseModel{Successful: true, Data: data})
-}
-
+// @Security BearerAuth
+// @Produce      json
+// @Param        file_name  path  string  true "no comment"
+// @Router       /file-meta-data/update-file-access/{file_name} [put]
 func (mc *fileMetaDataController) UpdateFileAccess(c *fiber.Ctx) error {
 	fileName := c.Params("file_name")
 
@@ -76,5 +77,21 @@ func (mc *fileMetaDataController) UpdateFileAccess(c *fiber.Ctx) error {
 		return err
 	}
 
+	return c.JSON(entity.ResponseModel{Successful: true, Data: data})
+}
+
+// @Security BearerAuth
+// @Produce      json
+// @Param        file_name  path  string  true "no comment"
+// @Router       /file-meta-data/delete-file/{file_name} [delete]
+func (mc *fileMetaDataController) DeleteFile(c *fiber.Ctx) error {
+	user := c.Locals("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	fileName := c.Params("file_name")
+
+	data, err := mc.staticFileManagerUsecase.DeleteFile(c.Context(), fileName, claims)
+	if err != nil {
+		return err
+	}
 	return c.JSON(entity.ResponseModel{Successful: true, Data: data})
 }
